{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 89,
  "lineage": "b259ab98-6fbc-7ba5-f05e-aa3c1deca0af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prime-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:internet-gateway/igw-0113111c9b66daff3",
            "id": "igw-0113111c9b66daff3",
            "owner_id": "180745000361",
            "tags": {
              "Name": "prime-igw"
            },
            "tags_all": {
              "Name": "prime-igw"
            },
            "vpc_id": "vpc-08b5939c44f353119"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:route-table/rtb-09c19bb7e383b453d",
            "id": "rtb-09c19bb7e383b453d",
            "owner_id": "180745000361",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0113111c9b66daff3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prime-pub-route-table"
            },
            "tags_all": {
              "Name": "prime-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b5939c44f353119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:route-table/rtb-0926e37cd55a04d89",
            "id": "rtb-0926e37cd55a04d89",
            "owner_id": "180745000361",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prime-private-route-table"
            },
            "tags_all": {
              "Name": "prime-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b5939c44f353119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06281368591da3494",
            "route_table_id": "rtb-0926e37cd55a04d89",
            "subnet_id": "subnet-0465ab8a36a35d04d"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.prime-private1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4c2d5b68f3132f9",
            "route_table_id": "rtb-0926e37cd55a04d89",
            "subnet_id": "subnet-03e2a2f184322d90d"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.prime-private2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9561b243e4f983a",
            "route_table_id": "rtb-09c19bb7e383b453d",
            "subnet_id": "subnet-05da0b8c6cac0b4c7"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064afadd9c9205dbf",
            "route_table_id": "rtb-09c19bb7e383b453d",
            "subnet_id": "subnet-062891fab8eb2f8ba"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:subnet/subnet-0465ab8a36a35d04d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0465ab8a36a35d04d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180745000361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private1"
            },
            "tags_all": {
              "Name": "prime-private1"
            },
            "vpc_id": "vpc-08b5939c44f353119"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:subnet/subnet-03e2a2f184322d90d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e2a2f184322d90d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180745000361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private2"
            },
            "tags_all": {
              "Name": "prime-private2"
            },
            "vpc_id": "vpc-08b5939c44f353119"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:subnet/subnet-05da0b8c6cac0b4c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05da0b8c6cac0b4c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180745000361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub1"
            },
            "tags_all": {
              "Name": "prime-pub1"
            },
            "vpc_id": "vpc-08b5939c44f353119"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:subnet/subnet-062891fab8eb2f8ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062891fab8eb2f8ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180745000361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub2"
            },
            "tags_all": {
              "Name": "prime-pub2"
            },
            "vpc_id": "vpc-08b5939c44f353119"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180745000361:vpc/vpc-08b5939c44f353119",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00702b68c184ee73a",
            "default_route_table_id": "rtb-0d563f5198220113e",
            "default_security_group_id": "sg-08a556f0628df8c52",
            "dhcp_options_id": "dopt-0415d145df394121a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b5939c44f353119",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d563f5198220113e",
            "owner_id": "180745000361",
            "tags": {
              "Name": "prime"
            },
            "tags_all": {
              "Name": "prime"
            }
          }
        }
      ]
    }
  ]
}